cmake_minimum_required(VERSION 3.31)
project(ACM)

set(CMAKE_CXX_STANDARD 26)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(main main.cpp)
add_executable(LeetCode3-Solution-01 "LeetCode/ProblemSet/Volume (1-99)/LeetCode3/LeetCode3-Solution-01.cpp")
add_executable(LeetCode643-Solution-01 "LeetCode/ProblemSet/Volume (600-699)/LeetCode643/LeetCode643-Solution-01.cpp")
add_executable(LeetCode1052-Solution-01 "LeetCode/ProblemSet/Volume (1000-1099)/LeetCode1052/LeetCode1052-Solution-01.cpp")
add_executable(LeetCode1343-Solution-01 "LeetCode/ProblemSet/Volume (1300-1399)/LeetCode1343/LeetCode1343-Solution-01.cpp")
add_executable(LeetCode1423-Solution-01 "LeetCode/ProblemSet/Volume (1400-1499)/LeetCode1423/LeetCode1423-Solution-01.cpp")
add_executable(LeetCode1423-Solution-02 "LeetCode/ProblemSet/Volume (1400-1499)/LeetCode1423/LeetCode1423-Solution-02.cpp")
add_executable(LeetCode1456-Solution-01 "LeetCode/ProblemSet/Volume (1400-1499)/LeetCode1456/LeetCode1456-Solution-01.cpp")
add_executable(LeetCode1784-Solution-01 "LeetCode/ProblemSet/Volume (1700-1799)/LeetCode1784/LeetCode1784-Solution-01.cpp")
add_executable(LeetCode1784-Solution-02 "LeetCode/ProblemSet/Volume (1700-1799)/LeetCode1784/LeetCode1784-Solution-02.cpp")
add_executable(LeetCode1888-Solution-01 "LeetCode/ProblemSet/Volume (1800-1899)/LeetCode1888/LeetCode1888-Solution-01.cpp")
add_executable(LeetCode2090-Solution-01 "LeetCode/ProblemSet/Volume (2000-2099)/LeetCode2090/LeetCode2090-Solution-01.cpp")
add_executable(LeetCode2379-Solution-01 "LeetCode/ProblemSet/Volume (2300-2399)/LeetCode2379/LeetCode2379-Solution-01.cpp")
add_executable(LeetCode2461-Solution-01 "LeetCode/ProblemSet/Volume (2400-2499)/LeetCode2461/LeetCode2461-Solution-01.cpp")
add_executable(LeetCode2841-Solution-01 "LeetCode/ProblemSet/Volume (2800-2899)/LeetCode2841/LeetCode2841-Solution-01.cpp")
add_executable(LeetCode3439-Solution-01 "LeetCode/ProblemSet/Volume (3400-3499)/LeetCode3439/LeetCode3439-Solution-01.cpp")
add_executable(LeetCode3679-Solution-01 "LeetCode/ProblemSet/Volume (3600-3699)/LeetCode3679/LeetCode3679-Solution-01.cpp")
