cmake_minimum_required(VERSION 3.31)
project(ACM)

set(CMAKE_CXX_STANDARD 26)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(main main.cpp)

add_executable(ACM
        "LeetCode/ProblemSet/Volume (1-99)/LeetCode3/LeetCode3-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (600-699)/LeetCode643/LeetCode643-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (1000-1099)/LeetCode1052/LeetCode1052-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (1200-1299)/LeetCode1208/LeetCode1208-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (1300-1399)/LeetCode1343/LeetCode1343-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (1400-1499)/LeetCode1423/LeetCode1423-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (1400-1499)/LeetCode1423/LeetCode1423-Solution-02.cpp"
        "LeetCode/ProblemSet/Volume (1400-1499)/LeetCode1456/LeetCode1456-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (1400-1499)/LeetCode1493/LeetCode1493-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (1700-1799)/LeetCode1784/LeetCode1784-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (1700-1799)/LeetCode1784/LeetCode1784-Solution-02.cpp"
        "LeetCode/ProblemSet/Volume (1800-1899)/LeetCode1888/LeetCode1888-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (2000-2099)/LeetCode2090/LeetCode2090-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (2300-2399)/LeetCode2379/LeetCode2379-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (2400-2499)/LeetCode2461/LeetCode2461-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (2800-2899)/LeetCode2841/LeetCode2841-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (3000-3099)/LeetCode3090/LeetCode3090-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (3400-3499)/LeetCode3439/LeetCode3439-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (3600-3699)/LeetCode3634/LeetCode3634-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (3600-3699)/LeetCode3679/LeetCode3679-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (900-999)/LeetCode904/LeetCode904-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (1600-1699)/LeetCode1695/LeetCode1695-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (2900-2999)/LeetCode2958/LeetCode2958-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (2000-2099)/LeetCode2024/LeetCode2024-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (1000-1099)/LeetCode1004/LeetCode1004-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (2700-2799)/LeetCode2730/LeetCode2730-Solution-01.cpp"
        "LeetCode/ProblemSet/Volume (2700-2799)/LeetCode2779/LeetCode2779-Solution-01.cpp")

